Update on Overleaf.

--- a/paper.tex
+++ b/paper.tex
@@ -208,8 +208,8 @@ We can distinguish a last category of spatial effects in geosimulation, which ar
 %%%%%%%%%%%%%%%%%%%%%%
 \section{Methods}
 %%%%%%%%%%%%%%%%%%%%%%
-
-The general workflow of our method is illustrated in Figure \ref{fig:method}. In addition to the usual protocol (upper branch of the figure), which consists of running a model $\mu$ with different values of its parameters, we introduce a spatial generator which depends on its very own set of parameters and feeds the model $\mu$ at initialisation (lower branch). We call these parameters ``generator parameters'' to distinguish them from the standard parameters of the models and to highlight their higher position in the simulation process. The resulting configurations \emph{can be} clustered into qualitative types of spatial patterns. The sensitivity analysis relates the variations in the model's outcomes to how the density spatial distribution was generated and to the patterns of density generated. In particular, we want to emphasize that spatial effects derive not only from grid size or shape effects, but also from the heterogeneity of the spatial distribution of socio-spatial entities (people, housing, networks, etc.). In the models we used as examples, the initial spatial configurations can be either flat or heterogeneous, monocentric or polycentric, based on external databases and on internal modelling (generation of synthetic population for instance \citep{bhat1999activity}).
+%change1 ``generator parameters''
+The general workflow of our method is illustrated in Figure \ref{fig:method}. In addition to the usual protocol (upper branch of the figure), which consists of running a model $\mu$ with different values of its parameters, we introduce a density grid generator which depends on its very own set of parameters and feeds the model $\mu$ at initialisation (lower branch). We call these parameters \comment[FL]{change1} $\gamma$ parameters to distinguish them from the standard parameters of the models (called $\mu$ parameters) and to highlight their higher position in the simulation process. The resulting configurations \emph{can be} clustered into qualitative types of spatial patterns. The sensitivity analysis relates the variations in the model's outcomes to how the density spatial distribution was generated and to the patterns of density generated. In particular, we want to emphasize that spatial effects derive not only from grid size or shape effects, but also from the heterogeneity of the spatial distribution of socio-spatial entities (people, housing, networks, etc.). In the models we used as examples, the initial spatial configurations can be either flat or heterogeneous, monocentric or polycentric, based on external databases and on internal modelling - generation of synthetic population for instance \citep{bhat1999activity}.
 %%%%%%%%%%%%%%%%%%%%%%
 \begin{figure}[!t]
 \centering
@@ -220,39 +220,42 @@ The general workflow of our method is illustrated in Figure \ref{fig:method}. In
 %%%%%%%%%%%%%%%%%%%%%%
 
 
-In order to test the influence of initial spatial conditions on model outputs, we use a systematic method to compare \emph{phase diagrams}. Following \citet{Gauvinetal2009}, we define a phase diagram as the vector of final aggregated model outputs considered as a function of model parameters. We have as many phase diagrams than we have spatial grids, which makes a qualitative visual comparison not realistic (with around 50 different spatial configurations for each model experiment). A solution is to use systematic quantitative procedures to compare them to a reference case. Technically, because of stochasticity, we represent the output of the model for a given combination of parameter values $\vec{P}$ as the mean of the final values of an output indicator $O$ obtained for the replications of the model initialized with $\vec{P}$.\\
-
-To our knowledge there exists no single well established method to compare phase diagrams in the agent-based modelling and geosimulation literature. We introduce a measure of the relative distance $d_r$ between two phase diagrams $\mu_{\vec{\alpha}_1}$ and $\mu_{\vec{\alpha}_2}$. Phase diagrams are denoted by the same function $\mu$ indexed by the generator parameters $\vec{\alpha}$, which capture the spatial configuration (in practice these can be parameters of an upstream model to generate the configuration, or a description of the configuration itself). The $d_r$ measure is taken as the share of between-diagrams variability relative to their internal variability, given formally in the case of a one-dimensional phase diagram by
+In order to test the influence of initial spatial conditions on model outputs, we use a systematic method to compare \emph{phase diagrams}. Following \citet{Gauvinetal2009}, we define a phase diagram as the vector of final aggregated model outputs considered as a function of model parameters. We have as many phase diagrams than we have spatial grids, which makes a qualitative visual comparison not realistic (with around 50 different spatial configurations for each model experiment). A solution is to use systematic quantitative procedures to compare them to a reference case. Technically, because of stochasticity, we represent the output of the model for a given set of parameter values as the mean of the final values of an output indicator obtained for the replications of the model initialized with the set of parameter values \\
+%removed : $\vec{P}$  $O$ $\vec{P}$.
+To our knowledge there exists no single well established method to compare phase diagrams in the agent-based modelling and geosimulation literature\comment[FL]{signaler tout de même des tentatives on ne part pas de rien!}. We introduce a measure of the relative distance $d_r(\mu_{\vec{\alpha}_1},\mu_{\vec{\alpha}_2})$ between two phase diagrams $\mu_{\vec{\alpha}_1}$ and $\mu_{\vec{\alpha}_2}$. Phase diagrams are denoted by the same function $\mu$ indexed by the generator parameters $\vec{\alpha}$, which capture the spatial configuration (in practice these can be parameters of an upstream model to generate the configuration, or a description of the configuration itself). The $d_r$ measure is taken as the share of between-diagrams variability relative to their internal variability, given formally in the case of a one-dimensional phase diagram by
 
 
 \begin{equation}\label{eq:phase-distance}
 d_r\left(\mu_{\vec{\alpha}_1},\mu_{\vec{\alpha}_2}\right) = 2 \cdot \frac{d(\mu_{\vec{\alpha}_1},\mu_{\vec{\alpha}_2})^2}{Var\left[\mu_{\vec{\alpha}_1}\right] + Var\left[\mu_{\vec{\alpha}_2}\right]}
 \end{equation}
 
-where $\mu_{\vec{\alpha}_i}$ are the phase diagrams at given generator parameters $\vec{\alpha}_i$. $d$ is a functional distance that we take simply as Euclidean distance. The internal variabilities are estimated as the variance within each phase diagram $\mu_{\vec{\alpha_i}}$. For a multi-dimensional phase diagram, we average these relative distances over the components. Given a set of phase diagram to be compared, we will study the distribution of this distance to an arbitrary phase diagram for all diagrams, rather than an aggregated measure which would be similar to global sensitivity methods \citep{saltelli2008global}.
+%where $\mu_{\vec{\alpha}_i}$ are the phase diagrams at given generator parameters $\vec{\alpha}_i$.
+% pour le coup cette précision me semble superflue
+\comment[FL]{dire plutôt pourquoi le choix de cette fonction qui n'a rien de trivial : d'où cela sort-il? Quels avantages de cette fonction mathématique? Comment est calculée la Variance?}
+$d$ is a functional distance that we take simply as Euclidean distance. The internal variabilities are estimated as the variance within each phase diagram $\mu_{\vec{\alpha_i}}$. For a multi-dimensional phase diagram, we average these relative distances over the components. Given a set of phase diagram to be compared, we will study the distribution of this distance to an arbitrary phase diagram for all diagrams, rather than an aggregated measure which would be similar to global sensitivity methods \citep{saltelli2008global}.
 
-The last methodological point which we need to emphasize is the relationship between the present workflow and model exploration workflows in general. The ideas of multi-modelling and extensive model exploration are nothing from new - ~\cite{openshaw1983data} already advocated for ``model-crunching'' in 1983 -, but their effective use only begins to emerge thanks to the development of new methods and tools together with an explosion of computation capabilities. The model exploration platform OpenMOLE~\citep{reuillon2013openmole} allows to embed any model as a blackbox, to write flexible exploration workflow using advanced methodologies such as genetic algorithms and to distribute transparently the computation on large scale computation infrastructures such as clusters or computation grids. In our case, this tool is a powerful way to embed both the sensitivity analysis and the sensitivity analysis to initial spatial conditions, and to allow the coupling of any spatial generator with any model in a straightforward way as long as the model can take its spatial configuration as an input or from an input file. In this paper, we use the OpenMOLE platform for the spatial environment and the model coupling, placing ourselves in the framework of multi-modelling \citep{cottineau2015modular}. We use therefore OpenMOLE's functionalities for model embedding through workflow, design of experiments (parameter sampling) and high performance environment access.
+The last methodological point which we need to emphasize is the relationship between the present workflow and model exploration workflows in general. The ideas of multi-modelling and extensive model exploration are nothing from new - ~\cite{openshaw1983data} already advocated for ``model-crunching'' in 1983 -, but their effective use only begins to emerge thanks to the development of new methods and tools together with an explosion of computation capabilities. The model exploration platform OpenMOLE~\citep{reuillon2013openmole}\comment[FL]{citer d'autres plateformes -StopPub et d'autre part : justifier en quoi c'est nécessaire? A mon sens : ici très utile, mais pas nécessairement utile si moins de paramètres ; mettre donc les questions de calculabilités au coeur de cette discussion} allows to embed any model as a blackbox, to write flexible exploration workflow using advanced methodologies such as genetic algorithms and to distribute transparently the computation on large scale computation infrastructures such as clusters or computation grids. In our case, this tool is a powerful way to embed both the sensitivity analysis and the sensitivity analysis to initial spatial conditions, and to allow the coupling of any spatial generator with any model in a straightforward way as long as the model can take its spatial configuration as an input or from an input file. In this paper, we use the OpenMOLE platform for the spatial environment and the model coupling, placing ourselves in the framework of multi-modelling \citep{cottineau2015modular}. We use therefore OpenMOLE's functionalities for model embedding through workflow, design of experiments (parameter sampling) and high performance environment access.
 
 
 %%%%%%%%%%%%%%%%%%%%%%
 \subsection{Spatial generator of density grids}
 
-The spatial generator applies an urban morphogenesis model \citep{batty2007cities} which has been generalised, explored and calibrated by~\citet{raimbault2018calibration}. An open implementation and a characterisation of the urban forms which the model can produce allow us to integrate it easily into our workflow. Population density grids, at the typical scale of a metropolitan area, are generated by combining the opposite processes of urban dispersal (negative externalities) with urban concentration (positive externalities). More precisely, grids are generated through an iterative process which simulates successive time steps with a fixed population gain at each time step. Starting from an empty grid, the model adds a quantity $N$ (population) at each time step $t$. The new population is allocated through preferential attachment on previous population density. Formally, each added unit has a probability equal to $P_i^{\alpha}/\sum_k P_k^{\alpha}$ to be added to a patch $i$ with population $P_i$, all $N$ units being added independently and in parallel. The attachment parameter $\alpha$ can thus be interpreted as a ``strength of attraction'', in the sense that increasing it will lead to a higher instantaneous concentration. At the end of each time step, this growth process is smoothed $n_d$ times using a diffusion process: each patch transmits an equal share of $\beta\cdot P_i$ to its Moore neighborhood (i.e. its 8 surrounding patches). The parameter $\beta$ can be interpreted as a strength of diffusion: increasing it will lead to larger share of population being diffused in space. To avoid border effects such as a reflexion on the border of the world, border patches diffuse to the outside. The procedure stops when a fixed number of steps $t_f$ is reached. The grid then has a population of $t_f \cdot N$ (the population lost due to diffusion process to the outside is reallocated through a normalization procedure at the end of the steps). Grids are thus generated from the combination of the values of these four generator parameters $\alpha$, $\beta$, $n_d$ and $N$, in addition to the random seed. To ease our exploration, only the distribution of density is allowed to vary rather than the size of the grid, which we fix to a 50x50 square environment. We furthermore fix the total population at $t_f\cdot N = 100,000$, and determine therein the number of steps needed at a given $N$. Typical value ranges for the  parameters will be taken as, following \citet{raimbault2018calibration}, $\alpha\in\left[0.5,4.0\right]$, $\beta \in\left[0,0.3\right] $, $N\in \left[100,10000\right]$, $n_d\in\left[1,4\right]$. We illustrate in Fig.\ref{fig:spatialGen} the variety of spatial configurations that can be generated.
+The density grid generator applies an urban morphogenesis model \citep{batty2007cities} which has been generalised, explored and calibrated by~\citet{raimbault2018calibration}\comment[FL]{manque ici la référence à d'autres techniques : par exemple le modèle multimonocentrique d'Anas, certes non génératif, mais pourquoi serait-ce à exclure de cette approche?}. An open implementation and a characterisation of the urban forms which the model can produce allow us to integrate it easily into our workflow. Population density grids, at the typical scale of a metropolitan area, are generated by combining the opposite processes of urban dispersal (negative externalities) with urban concentration (positive externalities). More precisely, grids are generated through an iterative process which simulates successive time steps with a fixed population gain at each time step. Starting from an empty grid, the model adds a quantity $N$ (population) at each time step $t$. The new population is allocated through preferential attachment on previous population density. Formally, each added unit has a probability equal to $P_i^{\alpha}/\sum_k P_k^{\alpha}$ to be added to a patch $i$ with population $P_i$, all $N$ units being added independently and in parallel. The attachment parameter $\alpha$ can thus be interpreted as a ``strength of attraction'', in the sense that increasing it will lead to a higher instantaneous concentration. At the end of each time step, this growth process is smoothed $n_d$ times using a diffusion process: each patch transmits an equal share of $\beta\cdot P_i$ to its Moore neighborhood (i.e. its 8 surrounding patches). The parameter $\beta$ can be interpreted as a strength of diffusion: increasing it will lead to larger share of population being diffused in space. To avoid border effects such as a reflexion on the border of the world, border patches diffuse to the outside. The procedure stops when a fixed number of steps $t_f$ is reached. The grid then has a population of $t_f \cdot N$ (the population lost due to diffusion process to the outside is reallocated through a normalization procedure at the end of the steps). Grids are thus generated from the combination of the values of these four generator parameters $\alpha$, $\beta$, $n_d$ and $N$, in addition to the random seed. To ease our exploration, only the distribution of density is allowed to vary rather than the size of the grid, which we fix to a 50x50 square environment. We furthermore fix the total population at $t_f\cdot N = 100,000$, and determine therein the number of steps needed at a given $N$. Typical value ranges for the  parameters will be taken as, following \citet{raimbault2018calibration}, $\alpha\in\left[0.5,4.0\right]$, $\beta \in\left[0,0.3\right] $, $N\in \left[100,10000\right]$, $n_d\in\left[1,4\right]$. We illustrate in Fig.\ref{fig:spatialGen} the variety of spatial configurations that can be generated.
 
 %%%%%%%%%%%%%%%%%%%%%%
 \begin{figure}[!t]
 \centering
 	\includegraphics[width=\textwidth]{figures/Fig2.png}
- \caption{\textbf{Four examples of grids produced by the spatial generator.} The lighter the red, the denser the area. Changing the growth rate $N$ allows to have more or less chaotic shapes (two first compared to the two last grids for example) corresponding to different levels of convergence of the model, whereas local radius can be tuned with the interplay of aggregation strength $\alpha$ and diffusion strength $\beta$. Parameter values used here are for the first grid $(\alpha = 0.4,\beta=0.006, N = 25, n_d = 1, t_f = 971)$, the second $(\alpha = 0.4,\beta=0.006, N = 25, n_d = 1, t_f = 176)$, the third $(\alpha = 1.4,\beta=0.045, N = 102, n_d = 2, t_f = 618)$, and the fourth $(\alpha = 1.8,\beta=0.114, N = 108, n_d = 1, t_f = 227)$.}
+ \caption{\textbf{Four examples of grids produced by the density grid generator.} The lighter the red, the denser the area. Changing the growth rate $N$ allows to have more or less chaotic shapes (two first compared to the two last grids for example) corresponding to different levels of convergence of the model, whereas local radius can be tuned with the interplay of aggregation strength $\alpha$ and diffusion strength $\beta$. Parameter values used here are for the first grid $(\alpha = 0.4,\beta=0.006, N = 25, n_d = 1, t_f = 971)$, the second $(\alpha = 0.4,\beta=0.006, N = 25, n_d = 1, t_f = 176)$, the third $(\alpha = 1.4,\beta=0.045, N = 102, n_d = 2, t_f = 618)$, and the fourth $(\alpha = 1.8,\beta=0.114, N = 108, n_d = 1, t_f = 227)$.}
 \label{fig:spatialGen}
 \end{figure} %
 %%%%%%%%%%%%%%%%%%%%%%
 
 
-In order to generate density grids which correspond to empirical density distributions, we select among the generated grids using an objective function which matches the point cloud of 110 metropolitan areas in Europe described by four dimensions of spatial structure: their concentration index, hierarchy index, centrality index and homogeneity index (cf. \cite{LeNechet2015}). These morphological dimensions are in practice captured using the rank-size slope to capture hierarchy, the average distance between individuals to capture concentration, distribution entropy to capture homogeneity, and Moran spatial autocorrelation index to measure centrality.
+In order to generate density grids which correspond to empirical density distributions, we select among the generated grids using an objective function which matches the point cloud of 110 metropolitan areas in Europe described by four dimensions of spatial structure: their concentration index, hierarchy index, centrality index and homogeneity index (cf. \cite{LeNechet2015}). These four dimensions were chosen as complementary descriptors of spatial organisation at urban or metropolitain level - see also \cite{tsai2005quantifying} and \cite{schwarz2010urban}. They account for : , the extend to which population is clustered in a central city, at macro scale (centrality) and micro scale (concentration), the extent to which density grid values are similar or contrasted, regardless of location, at macro scale (hierarchy) and micro scale (homogeneity)\comment[FL]{check with Juste quels indicateurs ont été utlisés}. These morphological dimensions are in practice captured using the rank-size slope to capture hierarchy, the average distance between individuals to capture concentration, distribution entropy to capture homogeneity, and Moran spatial autocorrelation index to measure centrality.
 
 We sample the generator parameter space using a Latin Hypercube Sampling, which is a convenient technique to have a scatter with low discrepancy in high dimensions. We sample 2000 points in the 4-dimensional space of parameters {$\alpha$, $\beta$, $n_d$, $N$}. It yields a subset of 170 grids matching empirical densities, which constituted our set of different initial spatial conditions. These are further clustered into three classes of morphology (figure \ref{fig:densityTypes}): compact (e.g. Vienna), polycentric (Liege) and discontinuous (Augsburg). This clustering allows to evaluate the non-trivial effects of a meaningful urban form on simulation results. We select 15 grids of each type to work with in the computation of sensitivity analysis of an intra-urban model (cf. section \ref{sec:qualResults}).
-
+\comment[FL]{à discuter}
 The spatial generator and its resulting grids are relevant to the case study models we have picked (Schelling and Sugarscape) because it produces density grids at a ``metropolitan scale'', which is the scale at which both model were initially intended to be. In the case of Schelling's segregation model for example, this scale is the one at which most empirical segregation indexes are computed and compared to the model outputs. In the case of Sugarscape, it corresponds to the whole city if the model is a metaphor for city resources \citep{batty2005agents}, or to a generic landscape where a resource is grown otherwise. In both cases, our point is that there exist many different patterns of density distribution in resource location and urban density and that acknowledging this diversity might leads to a variation in the model outputs. Furthermore, in urban models, we argue that the hypothesis of isotropic density is potentially the most unrealistic one, although unfortunately the most common one in Schelling implementations.
 
 %%%%%%%%%%%%%%%%%%%%%%
@@ -264,6 +267,7 @@ The spatial generator and its resulting grids are relevant to the case study mod
 \label{fig:densityTypes}
 \end{figure} %
 %%%%%%%%%%%%%%%%%%%%%%
+\comment[FL]{à discuter, rappeler sens des paramètres alpha, beta, etc. ; pourquoi appeler cela des "meta paramètres"? maintenant on appele cela des gamma parametres?}
 
 In the following section, we briefly recall the main components of the two ``classical'' agent-based simulation models used to test how spatial density variations may impact simulation models behaviour and results, and how general the method is.
 
@@ -419,7 +423,7 @@ We consider that the method presented in this paper holds great potential for st
 
 \subsubsection{Comparing phase diagrams}
 
-Comparing phase diagrams is as we saw not so straightforward, and further developments of our method imply testing alternative methods for this particular point. For example in the case of the Schelling model, an anisotropic spatial segregation index (giving the number of clusters found and in which region in the parameter spaces they are roughly situated) would differentiate strong phase transitions in the space of generator parameters. The use of metrics comparing spatial distributions, such as the Earth Movers Distance which is used for example in Computer Vision to compare probability distributions~\citep{rubner2000earth}, or the comparison of aggregated transition matrices of the dynamic associated to the potential described by each distribution, would also be potential tools. Map comparison methods, popular in environmental sciences, provide numerous tools to compare two dimensional fields~\citep{visser2006map,kuhnert2005comparing}. To compare a spatial field evolving in time, elaborated methods such as Empirical Orthogonal Functions that isolates temporal from spatial variations, would be applicable in our case by taking time as a parameter dimension, but these have been shown to perform similarly to direct visual inspection when averaged over a crowdsourcing~\citep{10.1371/journal.pone.0178165}. The transfer of methods used to compare sequences \citep{kruskal1983overview} or time-series \citep{liao2005clustering} is a possible way to develop measures between phase diagrams. The higher dimension of the phase diagrams we study must however be considered with caution when transferring methods, in a way analog to the application of global sensitivity indexes to spatial data \citep{lilburne2009sensitivity}. We can also note than more generally, this problem of comparing phase diagrams is a particular instance of the more generic issue of comparing patterns, which for example include unsupervised learning techniques \citep{hastie2009unsupervised}. The investigation of diverse approaches to systematically quantify differences between phase diagrams is an important potential development of our method.
+Comparing phase diagrams is as we saw not straightforward, and further developments of our method imply testing alternative methods for this particular point. For example in the case of the Schelling model, an anisotropic spatial segregation index (giving the number of clusters found and in which region in the parameter spaces they are roughly situated) would differentiate strong phase transitions in the space of generator parameters. The use of metrics comparing spatial distributions, such as the Earth Movers Distance which is used for example in Computer Vision to compare probability distributions~\citep{rubner2000earth}, or the comparison of aggregated transition matrices of the dynamic associated to the potential described by each distribution, would also be potential tools. Map comparison methods, popular in environmental sciences, provide numerous tools to compare two dimensional fields~\citep{visser2006map,kuhnert2005comparing}. To compare a spatial field evolving in time, elaborated methods such as Empirical Orthogonal Functions that isolates temporal from spatial variations, would be applicable in our case by taking time as a parameter dimension, but these have been shown to perform similarly to direct visual inspection when averaged over a crowdsourcing~\citep{10.1371/journal.pone.0178165}. The transfer of methods used to compare sequences \citep{kruskal1983overview} or time-series \citep{liao2005clustering} is a possible way to develop measures between phase diagrams. The higher dimension of the phase diagrams we study must however be considered with caution when transferring methods, in a way analog to the application of global sensitivity indexes to spatial data \citep{lilburne2009sensitivity}. We can also note than more generally, this problem of comparing phase diagrams is a particular instance of the more generic issue of comparing patterns, which for example include unsupervised learning techniques \citep{hastie2009unsupervised}. The investigation of diverse approaches to systematically quantify differences between phase diagrams is an important potential development of our method.
 
 \subsubsection{Sensitivity of indicators to the geometry}
 
