--- a/spacematters.bib
+++ b/spacematters.bib
@@ -26,7 +26,27 @@
 	year = {1981},
 	pages = {168-183}
 }
+@article{tsai2005quantifying,
+  title={Quantifying urban form: compactness versus' sprawl'},
+  author={Tsai, Yu-Hsin},
+  journal={Urban studies},
+  volume={42},
+  number={1},
+  pages={141--161},
+  year={2005},
+  publisher={Sage Publications Sage UK: London, England}
+}
 
+@article{schwarz2010urban,
+  title={Urban form revisited—Selecting indicators for characterising European cities},
+  author={Schwarz, Nina},
+  journal={Landscape and urban planning},
+  volume={96},
+  number={1},
+  pages={29--47},
+  year={2010},
+  publisher={Elsevier}
+}
 @article{arribas2014diverse,
   title={How Diverse can Spatial Measures of Cultural Diversity be? Results from Monte Carlo Simulations on an Agent-Based Model},
   author={Arribas-Bel, Daniel and Nijkamp, Peter and Poot, Jacques},
