Update on Overleaf.

--- a/paper.tex
+++ b/paper.tex
@@ -184,7 +184,7 @@ In this paper, we aim to provide an operational framework for studying the influ
 \subsection{The effects of the space in simulation models}
 
 \subsubsection{Spatial processes}
-In 'real-life', different spatial configurations of people in a city tend to be associated with different distributions of income, carbon emissions, educational outcomes, etc. For example, \citet{wheeler2006urban} shows that, in the US, sprawling cities are more unequal than their compact counterparts with respect to income. Dynamically, sprawl in American cities consists in the addition of new developments which have been occupied by different groups of population, resulting in a concentration of the wealthy in suburban pockets and of pockets of poverty in the inner city area \citep{jargowsky2002sprawl}. Similarly, in terms of pollution for example, \citet[p.173]{schwanen2001travel} show that \textit{``deconcentration of urban land uses encourages driving and discourages the use of public transport as well as cycling and walking''}\comment[FL]{je ne comprends pas ce point : est-ce lié à un modèle de simulation?}. These effects of geographical space on social systems correspond to processes to be included in geosimulation models.\\
+In 'real-life', different spatial configurations of people in a city tend to be associated with different distributions of income, carbon emissions, educational outcomes, etc. For example, \citet{wheeler2006urban} shows that, in the US, sprawling cities are more unequal than their compact counterparts with respect to income. Dynamically, sprawl in American cities consists in the addition of new developments which have been occupied by different groups of population, resulting in a concentration of the wealthy in suburban pockets and of pockets of poverty in the inner city area \citep{jargowsky2002sprawl}. Similarly, in terms of pollution for example, \citet[p.173]{schwanen2001travel} show that \textit{``deconcentration of urban land uses encourages driving and discourages the use of public transport as well as cycling and walking''}. These effects of geographical space on social systems correspond to processes to be included in geosimulation models.\\
 
 \subsubsection{Spatial representation}
 A discussion of the effects of spatial encoding and representation has also been associated with the field of geostatistics since the exposure of the Modifiable Areal Unit Problem (MAUP) \citep{Openshaw1984, FotheringhamWong1991}. For example, \citet{Kwan2012} has argued for a careful examination of what she coins the 'uncertain geographic context problem' (UGCoP), i.e. of the spatial configuration of geographical units even when the size and delineation of the area are the same. Considerations of such issues in the geosimulation literature are rather scarce. However, there have been some noticeable attempts at analysing the impact of three types of initial spatial characteristics on model outcomes:
