--- a/Response_to_Reviewers.tex
+++ b/Response_to_Reviewers.tex
@@ -153,8 +153,7 @@ B. To highlight limitations as well as promising perspectives of improvement, we
 
 \medskip
 
-  \item \textit{The problem, from a geographical point of view, is that the paper switches between “geographical” and “spatial” without making any differentiation. \ldots}
-  %In so doing, the author(s) runs immediately into the problem of adequate definitions. In paragraph 1.2 the definition of geographical systems as “social agents interacting with one another, within a limited portion of space” is misleading. First, it is a tautology (geographical systems in space); secondly, geographical cannot be described with social agents, because geographical systems are composed of spatial units, their relations, and a spatially defined system border. Social systems, in turn, might be described with humans as elements, their relations, and again a socially defined system border. Moreover, with respect to sociological system theory (Luhmann 1993), space does not add any knowledge to the nature of social systems. This approach can be (and I would add: has to be) criticised, however, not by interming! ling fuzzily the social with the geographical, as happened with this definition. 
+  \item \textit{The problem, from a geographical point of view, is that the paper switches between “geographical” and “spatial” without making any differentiation. In so doing, the author(s) runs immediately into the problem of adequate definitions. In paragraph 1.2 the definition of geographical systems as “social agents interacting with one another, within a limited portion of space” is misleading. First, it is a tautology (geographical systems in space); secondly, geographical cannot be described with social agents, because geographical systems are composed of spatial units, their relations, and a spatially defined system border. Social systems, in turn, might be described with humans as elements, their relations, and again a socially defined system border. Moreover, with respect to sociological system theory (Luhmann 1993), space does not add any knowledge to the nature of social systems. This approach can be (and I would add: has to be) criticised, however, not by interming! ling fuzzily the social with the geographical, as happened with this definition.} 
   %\item \comment[JR]{by spatial we indeed mean some kind of spatial container for agents right ? which is far from geographical in the sense he puts it indeed}\comment[MLT]{use sociospatial system instead? The term is broadly used in the literature to describe the interdependence between social phenomena and their spatial environment. We could also quote \hyperlink{https://journals.sagepub.com/doi/abs/10.1068/d9107}{Jessop et al. 2008}}
   
  $\rightarrow$ This issue is tackled by comment A.
