--- a/paper.tex
+++ b/paper.tex
@@ -263,11 +263,12 @@ The spatial generator and its resulting grids are relevant to the case study mod
 \centering
 	%\includegraphics[width=0.9\textwidth]{figuresraw/GridPresentation.png}
 	\includegraphics[width=0.9\textwidth]{figures/Fig3.png}
- \caption{Correspondence between European urban density structures and grids produced with the spatial generator.} 
+ \caption{Correspondence between European urban density structures and grids produced with the spatial generator.}
+ \comment[FL]{à discuter, rappeler sens des paramètres alpha, beta, etc. ; pourquoi appeler cela des "meta paramètres"? maintenant on appele cela des gamma parametres?} \comment[JR]{+ correc nombre de chiffres significatifs}
 \label{fig:densityTypes}
 \end{figure} %
 %%%%%%%%%%%%%%%%%%%%%%
-\comment[FL]{à discuter, rappeler sens des paramètres alpha, beta, etc. ; pourquoi appeler cela des "meta paramètres"? maintenant on appele cela des gamma parametres?}
+
 
 In the following section, we briefly recall the main components of the two ``classical'' agent-based simulation models used to test how spatial density variations may impact simulation models behaviour and results, and how general the method is.
 
